2006-01-14  Stefan Jahn  <stefan@lkcc.org>

	* d_flipflop.cpp, jk_flipflop.cpp, rs_flipflop.cpp: Including
	<stdlib.h> for strtod() definition.

2006-01-10  Stefan Jahn  <stefan@lkcc.org>

	* jk_flipflop.cpp (JK_FlipFlop), rs_flipflop.cpp (RS_FlipFlop),
	d_flipflop.cpp (D_FlipFlop): Slightly modified the schematic
	symbols.

2005-12-18  Stefan Jahn  <stefan@lkcc.org>

	* bjtsub.cpp, bjt.cpp, jfet.cpp, mosfet.cpp, mosfet_sub.cpp:
	Added temperature and area model parameters.

2005-12-12  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added new temperature and area model
	parameters.

2005-05-21  Stefan Jahn  <stefan@lkcc.org>

	* spicedialog.cpp (loadSpiceNetList): Closing stdin of
	qucsconv process.

2005-05-15  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added 'Bv' and 'Ibv' properties.

2004-11-11  Stefan Jahn  <stefan@lkcc.org>

	* ac_sim.cpp (AC_Sim), dc_sim.cpp (DC_Sim): Incorporate linebreak
	in the component text if necessary (french translation used
	really loooong words).

2004-10-11  Stefan Jahn  <stefan@lkcc.org>

	* param_sweep.cpp (Param_Sweep), sp_sim.cpp (SP_Sim),
	tr_sim.cpp (TR_Sim), hb_sim.cpp (HB_Sim): Fixed error in
	word wrapping.

2004-08-31  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* component.cpp (paint): Using font metrics to calculate
	y-spacing for visible component properties.

2004-08-30  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* componentdialog.cpp (slotSelectProperty): Fixed bug when
	longer descriptions without white spaces occur.

2004-08-24  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp (correctDesc): New private function which
	is able to detect the special combox-box items in the component
	dialog.

	* isolator.cpp (Isolator), attenuator.cpp (Attenuator),
	msline.cpp (MSline): Added 'Temp' property for noise analysis.

2004-08-16  Stefan Jahn  <stefan@lkcc.org>

	* msopen.cpp (MSopen): Added 'Model' property.

2004-08-03  Stefan Jahn  <stefan@lkcc.org>
