@@ -24,9 +24,15 @@ Resistor::Resistor(bool european)
   Description = QObject::tr("resistor");
 
   Props.append(new Property("R", "50 Ohm", true,
-		QObject::tr("ohmic resistance in Ohms")));
+	QObject::tr("ohmic resistance in Ohms")));
   Props.append(new Property("Temp", "26.85", false,
-		QObject::tr("simulation temperature in degree Celsius")));
+	QObject::tr("simulation temperature in degree Celsius")));
+  Props.append(new Property("Tc1", "0.0", false,
+	QObject::tr("first order temperature coefficient")));
+  Props.append(new Property("Tc2", "0.0", false,
+	QObject::tr("second order temperature coefficient")));
+  Props.append(new Property("Tnom", "26.85", false,
+	QObject::tr("temperature at which parameters were extracted")));
 
   // this must be the last property in the list !!!
   Props.append(new Property("Symbol", "european", false,
